# shona

./: .gitignore  README.md  pyproject.toml
shona_core/: audit.py  cli.py  diff.py  owner.py  retention.py  risk.py  scan.py  settings.py  tray.py  voice.py
shona_core/modules/: actions_win.py  ports.py  processes.py  services_win.py  startup_win.py  tasks_win.py
shona_core/utils/: io.py
shona_core/web/: app.py
shona_core/web/static/: app.js  styles.css
shona_core/web/templates/: index.html
