[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shona"
version = "0.0.1"
description = "SHONA - local-first PC observer and security companion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
shona = "shona_core.cli:main"

[tool.setuptools]
packages = ["shona_core"]
