[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shona"
version = "0.1.0"
description = "SHONA - local-first cybersecurity assistant (CLI + Web + Tray)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jinja2>=3.1",
  "pystray>=0.19",
  "pillow>=10.0",
]

[project.scripts]
shona = "shona_core.cli:main"

[tool.setuptools]
packages = ["shona_core"]
